--- a/src/PdfSharp-gdi/PdfSharp-gdi.csproj
+++ b/src/PdfSharp-gdi/PdfSharp-gdi.csproj
@@ -879,6 +879,9 @@
     <Compile Include="..\PdfSharp\Pdf.Security\MD5Managed.cs">
       <Link>Pdf.Security\MD5Managed.cs</Link>
     </Compile>
+    <Compile Include="..\PdfSharp\Pdf.Security\PdfAESV2SecurityHandler.cs">
+      <Link>Pdf.Security\PdfAESV2SecurityHandler.cs</Link>
+    </Compile>
     <Compile Include="..\PdfSharp\Pdf.Security\PdfCryptoFilter.cs">
       <Link>Pdf.Security\PdfCryptoFilter.cs</Link>
     </Compile>
