Enabling to parse the ToUnicode content

--- a/src/PdfSharp/PdfSharp.csproj
+++ b/src/PdfSharp/PdfSharp.csproj
@@ -155,15 +155,16 @@
     <Compile Include="Drawing\XStringFormats.cs" />
     <Compile Include="Drawing\XUnit.cs" />
     <Compile Include="Drawing\XVector.cs" />
+    <Compile Include="Fonts.CID\CIDObjects.cs" />
+    <Compile Include="Fonts.CID\CIDOperators.cs" />
+    <Compile Include="Fonts.CID\CIDParser.cs" />
     <Compile Include="Fonts.CID\CIDRange.cs" />
     <Compile Include="Fonts.CID\CIDVersionControl.cs" />
     <Compile Include="Fonts.CID\CMap.cs" />
     <Compile Include="Fonts.CID\CMapDictionary.cs" />
-    <Compile Include="Fonts.CID\CIDObjects.cs" />
-    <Compile Include="Fonts.CID\CIDParser.cs" />
+    <Compile Include="Fonts.CID\CIDContentReader.cs" />
     <Compile Include="Fonts.CID\enums\CIDOpCodeName.cs" />
     <Compile Include="Fonts.CID\enums\CIDOpCodesFlags.cs" />
-    <Compile Include="Fonts.CID\CIDOperators.cs" />
     <Compile Include="Fonts.OpenType\enums\FontTechnology.cs" />
     <Compile Include="Fonts.OpenType\enums\TableTagNames.cs" />
     <Compile Include="Fonts.OpenType\FontDescriptor.cs" />
