* RC4 with user and owner passwords being validated * RC4 with variable key lengths between 40 and 128-bits * AESv2 with user and owner passwords being validated * AESv3 (PDF 1.7) with user and owner passwords being validated * AESv3 (PDF 2.0) with user and owner passwords being validated * Criptography and security algorithm tests

--- a/src/PdfSharp-wpf/PdfSharp-wpf.csproj
+++ b/src/PdfSharp-wpf/PdfSharp-wpf.csproj
@@ -861,6 +861,9 @@
     <Compile Include="..\PdfSharp\Pdf.Security\PdfAESV2SecurityHandler.cs">
       <Link>Pdf.Security\PdfAESV2SecurityHandler.cs</Link>
     </Compile>
+    <Compile Include="..\PdfSharp\Pdf.Security\PdfAESV3SecurityHandler.cs">
+      <Link>Pdf.Security\PdfAESV3SecurityHandler.cs</Link>
+    </Compile>
     <Compile Include="..\PdfSharp\Pdf.Security\PdfCryptoFilter.cs">
       <Link>Pdf.Security\PdfCryptoFilter.cs</Link>
     </Compile>
@@ -872,6 +875,12 @@
     </Compile>
     <Compile Include="..\PdfSharp\Pdf.Security\PdfStandardSecurityHandler.cs">
       <Link>Pdf.Security\PdfStandardSecurityHandler.cs</Link>
+    </Compile>
+    <Compile Include="..\PdfSharp\Pdf.Security\SHA256Managed.cs">
+      <Link>Pdf.Security\SHA256Managed.cs</Link>
+    </Compile>
+    <Compile Include="..\PdfSharp\Pdf.Security\StringPrep.cs">
+      <Link>Pdf.Security\StringPrep.cs</Link>
     </Compile>
     <Compile Include="..\PdfSharp\Pdf\EntryInfoAttribute.cs">
       <Link>Pdf\EntryInfoAttribute.cs</Link>
