--- a/src/PdfSharp-gdi/PdfSharp-gdi.csproj
+++ b/src/PdfSharp-gdi/PdfSharp-gdi.csproj
@@ -915,6 +915,9 @@
     <Compile Include="..\PdfSharp\Pdf.Security\PdfAESV2SecurityHandler.cs">
       <Link>Pdf.Security\PdfAESV2SecurityHandler.cs</Link>
     </Compile>
+    <Compile Include="..\PdfSharp\Pdf.Security\PdfAESV3SecurityHandler.cs">
+      <Link>Pdf.Security\PdfAESV3SecurityHandler.cs</Link>
+    </Compile>
     <Compile Include="..\PdfSharp\Pdf.Security\PdfCryptoFilter.cs">
       <Link>Pdf.Security\PdfCryptoFilter.cs</Link>
     </Compile>
@@ -926,6 +929,12 @@
     </Compile>
     <Compile Include="..\PdfSharp\Pdf.Security\PdfStandardSecurityHandler.cs">
       <Link>Pdf.Security\PdfStandardSecurityHandler.cs</Link>
+    </Compile>
+    <Compile Include="..\PdfSharp\Pdf.Security\SHA256Managed.cs">
+      <Link>Pdf.Security\SHA256Managed.cs</Link>
+    </Compile>
+    <Compile Include="..\PdfSharp\Pdf.Security\StringPrep.cs">
+      <Link>Pdf.Security\StringPrep.cs</Link>
     </Compile>
     <Compile Include="..\PdfSharp\Pdf\EntryInfoAttribute.cs">
       <Link>Pdf\EntryInfoAttribute.cs</Link>
