--- a/src/PdfSharp/PdfSharp.csproj
+++ b/src/PdfSharp/PdfSharp.csproj
@@ -308,6 +308,7 @@
     <Compile Include="Pdf.Security\AESManaged.cs" />
     <Compile Include="Pdf.Security\enums\PdfDocumentSecurity.cs" />
     <Compile Include="Pdf.Security\enums\PdfUserAccessPermission.cs" />
+    <Compile Include="Pdf.Security\PdfIdentitySecurityHandler.cs" />
     <Compile Include="Pdf.Security\StringPrep.cs" />
     <Compile Include="Pdf.Security\SHA256Managed.cs" />
     <Compile Include="Pdf.Security\MD5Managed.cs" />
